--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -16,7 +16,7 @@
     <jsplumb-controls surfaceId="surface"></jsplumb-controls>
 
     <!-- miniview -->
-    <div class="miniview"></div>
+    <jsplumb-miniview surfaceId="surface"></jsplumb-miniview>
   </div>
   <div class="jtk-demo-rhs">
 
