--- a/angular/src/styles.css
+++ b/angular/src/styles.css
@@ -81,14 +81,14 @@ body {
 }
 
 
-.miniview {
+jsplumb-miniview {
   position: absolute;
   top: 25px;
   right: 25px;
   z-index: 100;
 }
 
-.jtk-controls-container {
+jsplumb-controls {
   top: 25px;
   position: absolute;
   left: 25px;
