remove unnecessary surfaceId and toolkitId values

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,22 +1,16 @@
 <div class="jtk-demo-main" id="jtk-demo-chatbot">
 
-
-
-
   <!-- main drawing area -->
   <div class="jtk-demo-canvas">
-    <jsplumb-surface surfaceId="surface"
-                     toolkitId="toolkit"
-                     [toolkitParams]="toolkitParams"
+    <jsplumb-surface [toolkitParams]="toolkitParams"
                      [renderParams]="renderParams"
                      [view]="view"></jsplumb-surface>
 
     <!-- controls -->
-    <div class="jtk-controls-container"></div>
-    <jsplumb-controls surfaceId="surface"></jsplumb-controls>
+    <jsplumb-controls></jsplumb-controls>
 
     <!-- miniview -->
-    <jsplumb-miniview surfaceId="surface"></jsplumb-miniview>
+    <jsplumb-miniview></jsplumb-miniview>
   </div>
   <div class="jtk-demo-rhs">
 
@@ -24,13 +18,12 @@
     <div class="sidebar node-palette"
          jsplumb-surface-drop
          selector=".jtk-chatbot-palette-item"
-         surfaceId="surface"
          [dataGenerator]="dataGenerator">
       <div *ngFor="let nodeType of nodeTypes" class="jtk-chatbot-palette-item" [attr.data-type]="nodeType.type" title="Drag to add new">{{nodeType.label}}</div>
     </div>
 
     <!-- node/edge inspector -->
-    <app-inspector surfaceId="surface"></app-inspector>
+    <app-inspector></app-inspector>
 
   </div>
 
