add url to surface in template

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -4,7 +4,8 @@
   <div class="jtk-demo-canvas">
     <jsplumb-surface [toolkitParams]="toolkitParams"
                      [renderParams]="renderParams"
-                     [view]="view"></jsplumb-surface>
+                     [view]="view"
+                     url="/assets/dataset.json"></jsplumb-surface>
 
     <!-- controls -->
     <jsplumb-controls></jsplumb-controls>
